# webcam

./: CMakeLists.txt  annotate.sh  build-gcc.sh  check-arch-macros.c  copy-kernel.sh  copy-serial.sh  create-movie.c  cross-build-freebsd.sh  encode.sh  gen-cmake.sh  macports.cmake  motion.conf  motion.rc  onpicsave.sh  readme.txt  screen-serial.sh  set-cross-rpi.sh  takepic.sh  verify.sh  watchdog.sh
